--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ body {
 	font-family: "Open Sans", monospace;
 }
 
+h1 {
+	width: 500px;
+	text-align: center;
+	margin-left: 30px;
+}
+
 .timer-output {
 	width: 200px;
 	background: #222;
@@ -27,12 +33,16 @@ body {
 	margin: 12px;
 }
 
+.statusField {
+	margin-top: 20px;
+}
+
 .btn {
 	background: #54ba4e;
 	border: 1px solid #54ba4e;
 	color: #fff;
 	font-weight: 600;
-	text-transform: uppercase;
+	margin: auto;
 }
 
 .btn:hover {
@@ -43,7 +53,6 @@ body {
 
 .myaccordion {
 	width: 100%;
-	font-weight: bold;
 	color: #004987;
 }
 
@@ -60,7 +69,7 @@ body {
 	width: 100%;
 	font-weight: bold;
 	color: #004987;
-	padding: 0;
+	padding: 5px;
 }
 
 .myaccordion .btn-link:hover,
@@ -74,8 +83,22 @@ body {
 	align-items: center;
 }
 
-.btn-success {
-	height: 50px;
+.btn-answer {
+	background-color: #4caf50; /* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+}
+
+.btn-answer:hover {
+	background-color: #004987;
+	color: white;
 }
 
 .btn-group .fa {
